# plezy

./: .gitignore  README.md  pubspec.yaml
Casks/: plezy.rb
android/libass/src/main/cpp/: CMakeLists.txt
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/connection/: connection.dart
lib/database/: app_database.dart  download_operations.dart
lib/focus/: focusable_chip_mixin.dart  focusable_text_field.dart  focusable_tile_mixin.dart  owned_focus_node_binding.dart
lib/i18n/: bg.i18n.json  da.i18n.json  de.i18n.json  en.i18n.json  es.i18n.json  fr.i18n.json  it.i18n.json  ja.i18n.json  ko.i18n.json  nb.i18n.json  nl.i18n.json  pl.i18n.json  pt.i18n.json  ru.i18n.json  strings.g.dart  strings_bg.g.dart  strings_da.g.dart  strings_de.g.dart  strings_en.g.dart  strings_es.g.dart  strings_fr.g.dart  strings_it.g.dart  strings_ja.g.dart  strings_ko.g.dart  strings_nb.g.dart  strings_nl.g.dart  strings_pl.g.dart  strings_pt.g.dart  strings_ru.g.dart  strings_sv.g.dart  strings_zh.g.dart  sv.i18n.json  zh.i18n.json
lib/media/: episode_collection.dart  live_tv_support.dart  lyrics.dart  media_display_criteria.dart  media_item.dart  media_part.dart  media_part.g.dart  media_role.dart  media_role.g.dart  media_server_client.dart  media_version.dart  media_version.g.dart  media_version_preference.dart  server_capabilities.dart  stepped_seek.dart
lib/metadata_edit/: jellyfin_metadata_edit_adapter.dart  metadata_edit_models.dart  plex_metadata_edit_adapter.dart
lib/mixins/: debounced_media_search.dart  paginated_item_loader.dart  refreshable.dart
lib/models/: audio_quality_preset.dart  livetv_capture_buffer.dart  livetv_dvr.dart  livetv_lineup.dart  livetv_session.dart  livetv_session.g.dart  media_grab_operation.dart  media_grabber_device.dart  media_provider_info.dart  media_subscription.dart
lib/navigation/: profile_session_screen.dart
lib/profiles/: active_profile_binder.dart  active_profile_provider.dart  plex_home_service.dart  profile.dart  profile_connection_cleanup.dart  profile_connection_registry.dart
lib/providers/: companion_remote_provider.dart  discover_provider.dart  download_provider.dart  hidden_libraries_provider.dart  libraries_provider.dart  playback_state_provider.dart  seerr_account_provider.dart  trackers_provider.dart  trakt_account_provider.dart  user_profile_provider.dart
lib/screens/: catalog_item_detail_screen.dart  discover_screen.dart  explore_screen.dart  focusable_detail_screen_mixin.dart  hub_detail_screen.dart  main_screen.dart  media_detail_screen.dart  metadata_edit_screen.dart  (+2 more)
windows/: CMakeLists.txt
(+305 files in other folders)
